--- a/Front/crs/index.css
+++ b/Front/crs/index.css
@@ -34,5 +34,12 @@ main{
 .graph{
     grid-area: gr;
     border : solid green;
+}
 
+.btn{
+    width: max-content;
+    width: 100%;
+    height: 100%;
+    font-size: large;
+    background-color: antiquewhite;
 }
